# DAC-Qt

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Config.h  Config.h.in  ForceData.h  LabJackSink.cpp  LabJackSink.h  Main.qml  MassData.cpp  MassData.h  MockChart.qml  Navigation.qml  PressureData.cpp  PressureData.h  README.md  Settings.qml  Setup.qml  TelemetryChannel.cpp  TelemetryChannel.h  TelemetryData.h  TelemetryDataBase.h  TelemetrySinkBase.h  TemperatureData.cpp  TemperatureData.h  Visualization.qml  alexbuttonwidget.cpp  alexbuttonwidget.h  centralwidget.cpp  centralwidget.h  conanfile.txt  config.json  connection-tester.h  install.sh  launchinhibitor.cpp  launchinhibitor.h  main.cpp  mainwindow.cpp  mainwindow.h  (+15 more)
DAC-Qt_Tests/: CMakeLists.txt  tst_telemetrystream.cpp
broadcast/: Broadcaster.cpp  Broadcaster.h  Broadcaster.hpp  Sink.cpp  Sink.h  Sink.hpp
components/navigation/: NavButton.qml
components/visualization/: MockChart.qml
models/: ForceData.h  PressureData.h  TankFill.cpp  TankFill.h  TelemetryData.h  TemperatureData.h
sinks/: ColdFlowSinkStrategy.cpp  ColdFlowSinkStrategy.h  LabJackSink.cpp  LabJackSink.h  LabJackSinkStrategy.h
tests/: CMakeLists.txt  CTestTestfile.cmake  broadcaster-tests.cpp  cmake_install.cmake  labjacksink-tests.cpp
